RWD fixes for 2col and 3col overlapping girds

--- a/src/assets/scss/custom/overlapping-2col.scss
+++ b/src/assets/scss/custom/overlapping-2col.scss
@@ -10,6 +10,17 @@
       #FF972A 40px,
     );
 
+  .section-title-desc {
+    margin: 100px 0 50px;
+    color: #FFF;
+    text-align: center;
+    
+    h1 {
+      margin: 0;
+      font-size: 40px;
+    }
+  }
+
   .block {
     max-width: 1440px;
     width: 100%;
@@ -44,6 +55,12 @@
       h2 {
         padding-left: 200px;
         padding-right: 70px;
+        font-size: 40px;
+      }
+
+      p {
+        color:black;
+        font-size: 20px;
       }
     }
   }
@@ -53,6 +70,17 @@
       h2 {
         padding-right: 200px;
         padding-left: 70px;
+      }
+
+      a {
+          padding: 20px;
+          align-self: center;
+          border: 4px solid $secondary-color;
+          border-radius: 35px;
+          color: $secondary-color;
+          background-color: $primary-link-bg-color;
+          text-align: center;
+          font-size: 20px;
       }
     }
 
@@ -69,21 +97,55 @@
     .block {
       flex-direction: column;
       align-items: center;
-  
+      height: 100%;
+
       .block-left {
         position: relative;
         flex-grow: 1;
-  
-        > img {
-          position: static;
-          top: unset;
-          transform: unset;
-          height: auto;
+
+        >img {
           max-width: 400px;
-          z-index: 20;
+          height: auto;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          transform: translate(-50%, -25%);
+        }
+      }
+
+      .block-right {
+        max-width: 600px;
+
+        h2 {
+          padding: 200px 50px;
         }
       }
 
     }
+
+    .block.reverse {
+      flex-direction: column-reverse;
+
+      .block-left>img {
+        right: unset;
+      }
+
+      .block-right {
+        h2 {
+          padding: 200px 50px;
+        }
+      }
+    }
   }
+}
+
+@media screen and (max-width: 768px) {
+  .overlapping-2col {
+    .section-title-desc {
+      h1 {
+        font-size: 28px;
+      }
+    }
+  }
+  
 }
